--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -217,6 +217,31 @@
  HOL_CH47D_Modernization_desc: "The modernization of the CH-47D Chinook helicopters involves upgrading avionics, engines, and cargo systems. This focus ensures that these heavy-lift helicopters remain effective and reliable for transport, medevac, and support missions"
  HOL_AH46D_Upgrade: "AH-64D Upgrade"
  HOL_AH46D_Upgrade_desc: "Upgrading the AH-64D Apache attack helicopters includes enhancing their avionics, weapon systems, and survivability. This focus boosts the combat capabilities of the Dutch Air Force, ensuring these helicopters can effectively perform close air support and anti-armor missions."
+ # Army
+ HOL_Commando_Landstrijdkrachten: "Establish Commando Landstrijdkrachten"
+ HOL_Commando_Landstrijdkrachten_desc: " The creation of the Commando Landstrijdkrachten (CLAS) in 2005 marked a significant reorganization of the Dutch Army. This central command structure aimed to enhance operational efficiency and streamline decision-making processes. By consolidating various army components under one command, the Netherlands ensured better coordination and readiness of its land forces."
+ HOL_JISTARC: "JISTARC Establishment"
+ HOL_JISTARC_des: " The Joint Intelligence, Surveillance, Target Acquisition and Reconnaissance Command (JISTARC) was established to integrate and enhance the Dutch Army's intelligence capabilities. This unit combines various intelligence functions to provide comprehensive situational awareness and support for operations. JISTARC improves the effectiveness of reconnaissance and surveillance missions, ensuring accurate and timely information for tactical decisions."
+ HOL_DGLC: "DGLC Reorganisation"
+ HOL_DGLC_desc: "The Defensie Grondgebonden Luchtverdedigingscommando (DGLC) is responsible for ground-based air defense. Enhancing DGLC's capabilities involves upgrading missile systems and radar technology to protect against aerial threats. This focus ensures the Dutch Army can effectively defend its assets and territory from air attacks."
+ HOL_Vuursteun_Commando: "VuursteunCommando Deployment"
+ HOL_Vuursteun_Commando_desc: "The VuursteunCommando (Fire Support Command) integrates artillery and fire support elements to provide coordinated firepower for the Dutch Army. This focus includes modernizing artillery systems and improving targeting accuracy. Enhanced fire support capabilities increase the effectiveness of ground operations and ensure precise and timely firepower."
+ HOL_Supply_Command: "Bevoorradings- en Transportcommando Training"
+ HOL_Supply_Command_desc: "The Bevoorradings- en Transportcommando (Supply and Transport Command) is crucial for ensuring logistical support and mobility of the Dutch Army. This focus aims to improve supply chains, transport vehicles, and infrastructure to enhance the army's operational readiness and efficiency."
+ HOL_Military_Production_Investments: "Invest in Dutch Defense Industry"
+ HOL_Military_Production_Investments_desc: "The Dutch defense sector has seen key investments in recent years, from projects like the development of the F-35 to the modernization of naval vessels such as the Zeven Provinciën-class frigates. By choosing to further invest in the domestic defense industry, we can boost technological innovation, enhance self-reliance, and ensure that our armed forces remain equipped with state-of-the-art military hardware. This decision will strengthen national security and contribute to the growth of a robust defense economy."
+ HOL_Netherlands_Fractal_Pattern: "Netherlands Fractal Pattern"
+ HOL_Netherlands_Fractal_Pattern_desc: "The Netherlands Fractal Pattern (NFP) is a camouflage pattern developed for Dutch military uniforms. This advanced design provides better concealment across various environments, enhancing soldier survivability and effectiveness in the field."
+ HOL_DAF_Trucks: "DAF CF Military Trucks"
+ HOL_DAF_Trucks_desc: "Investing in DAF Trucks enhances the mobility and logistical capabilities of the Dutch Army. These versatile and reliable vehicles are essential for transporting troops, equipment, and supplies, ensuring operational flexibility and support."
+ HOL_DAF_Trucks_tt1: "Because we have invested in §YDAF§!, the costs have been lowered."
+ HOL_DAF_Trucks_tt2: "If we have invested in §YDAF§! before taking this focus, the cost will be halved."
+ HOL_Scania_Trucks: "New Scania Gryphus"
+ HOL_Scania_Trucks_desc: "Adding Scania Trucks to the Dutch Army's vehicle fleet improves logistical support and transport efficiency. These trucks are known for their durability and performance, making them ideal for military operations."
+ HOL_MRAD_Replacement: "Modernize Medium-Range Air Defense"
+ HOL_MRAD_Replacement_desc: "In 2020, the Dutch Ministry of Defense initiated a critical project to modernize its Medium-Range Air Defense (MRAD) systems. The current systems, including the NASAMS, will be replaced with more advanced, technologically superior platforms to better protect Dutch airspace and support NATO operations. By investing in new air defense capabilities, we ensure our forces remain capable of defending against modern aerial threats and securing the nation’s skies for the future."
+ HOL_COLT_Upgrade: "Upgrade of Colt C7 Rifle"
+ HOL_COLT_Upgrade_desc: "In 2009, the Dutch Armed Forces undertook a significant upgrade of the Colt C7 rifle, improving its accuracy, reliability, and adaptability for modern combat scenarios. This modernization included enhanced optics, ergonomics, and modular systems to meet the evolving needs of infantry units. By investing in these upgrades, the Dutch Army ensures its soldiers are equipped with cutting-edge weapons technology, maintaining a high level of combat readiness."
  # Navy
  HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
  HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
