Dutch Military Focusses
Created a custom land unit, technology file and technology.

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -242,6 +242,26 @@
  HOL_MRAD_Replacement_desc: "In 2020, the Dutch Ministry of Defense initiated a critical project to modernize its Medium-Range Air Defense (MRAD) systems. The current systems, including the NASAMS, will be replaced with more advanced, technologically superior platforms to better protect Dutch airspace and support NATO operations. By investing in new air defense capabilities, we ensure our forces remain capable of defending against modern aerial threats and securing the nation’s skies for the future."
  HOL_COLT_Upgrade: "Upgrade of Colt C7 Rifle"
  HOL_COLT_Upgrade_desc: "In 2009, the Dutch Armed Forces undertook a significant upgrade of the Colt C7 rifle, improving its accuracy, reliability, and adaptability for modern combat scenarios. This modernization included enhanced optics, ergonomics, and modular systems to meet the evolving needs of infantry units. By investing in these upgrades, the Dutch Army ensures its soldiers are equipped with cutting-edge weapons technology, maintaining a high level of combat readiness."
+ HOL_Pantserhouwitser_MLU: "Pantserhouwitser 2000 MLU"
+ HOL_Pantserhouwitser_MLU_desc: "The Pantserhouwitser 2000 MLU program focuses on upgrading these self-propelled howitzers with improved fire control systems, enhanced range, and increased accuracy. This ensures that the Dutch artillery remains highly effective and capable of providing precise fire support."
+ HOL_PULS: "Israelian PULS Order"
+ HOL_PULS_desc: "The Precise and Universal Launching System (PULS) is designed to improve the Dutch Army's artillery capabilities by integrating advanced rocket and missile systems. This system allows for precise and flexible fire support, enhancing the overall firepower of the army."
+ HOL_Bushmaster_MLU: "Bushmaster MLU"
+ HOL_Bushmaster_MLU_desc: "The Bushmaster MLU program involves upgrading the armor, communications systems, and mobility of these armored personnel carriers. This enhances the protection and effectiveness of Dutch troops in various operational environments."
+ HOL_Munition_Investments: "Munition Investments"
+ HOL_Munition_Investments_desc: "Investing in advanced munitions and expanding stockpiles ensures that the Dutch Army is well-supplied and capable of sustaining prolonged operations. This focus includes developing precision-guided munitions and improving logistics for ammunition supply."
+ HOL_Defensienota_2022: "Defensienota 2022"
+ HOL_Defensienota_2022_desc: "The Defensienota 2022 outlines strategic investments and reforms to enhance the Dutch military's capabilities. This comprehensive plan focuses on modernization, increasing defense budgets, and improving operational readiness across all branches of the armed forces."
+ HOL_Procure_Stinger_Missiles: "Procure Stinger Missiles"
+ HOL_Procure_Stinger_Missiles_desc: "Procuring Stinger missiles enhances the Dutch Army's ability to defend against low-flying aircraft and helicopters. These man-portable air-defense systems (MANPADS) provide flexible and mobile air defense capabilities."
+ HOL_Procure_Advanced_Mortars: "Procure Advanced Mortars"
+ HOL_Procure_Advanced_Mortars_desc: "Investing in advanced mortars improves the Dutch Army's indirect fire support capabilities. These systems offer greater range, accuracy, and mobility, providing essential firepower for infantry units."
+ HOL_Develop_Guide_Munitions: "Develop 155mm Precision Guided Munitions"
+ HOL_Develop_Guide_Munitions_desc: "Developing 155mm precision-guided munitions enhances the accuracy and effectiveness of Dutch artillery. These advanced munitions allow for precise targeting, reducing collateral damage and increasing operational effectiveness."
+ HOL_Expand_Patriot_Systems: "Expand Patriot Missile Systems"
+ HOL_Expand_Patriot_Systems_desc: "Expanding the deployment of Patriot missile systems improves the Dutch Army's capability to defend against ballistic missiles and advanced aerial threats. This focus enhances national and regional security by providing a robust air and missile defense network."
+ HOL_Expand_Command_Control_Centers: "Expand Command & Control Centers"
+ HOL_Expand_Command_Control_Centers_desc: " Expanding and modernizing command and control centers enhances the Dutch Army's operational coordination and decision-making capabilities. This focus includes upgrading communication systems and integrating advanced technology to ensure efficient command of military operations."
  # Navy
  HOL_Rijksregiebureau_Maritieme_Industrie: "Rijksregiebureau Martitieme Industrie"
  HOL_Rijksregiebureau_Maritieme_Industrie_desc: "The establishment of the Rijksregiebureau Maritieme Maakindustrie marks a significant step towards centralizing and coordinating the maritime manufacturing industry in the Netherlands. This agency will streamline efforts to innovate and expand shipbuilding and marine engineering capabilities, ensuring that Dutch maritime industries remain competitive and technologically advanced."
@@ -642,3 +662,11 @@
  HOL_ING_Group_Strategies_Expansion_Speciality3_desc: "Corporate clients are a key focus of ING’s business. By specializing in wholesale banking, ING will enhance its ability to offer customized financial solutions to large enterprises, driving corporate growth and revenue."
  HOL_ING_Group_Strategies_Expansion_Speciality4: "ING Wealth Services"
  HOL_ING_Group_Strategies_Expansion_Speciality4_desc: "Wealth management offers high returns and long-term client relationships. Specializing in wealth management will allow ING to cater to high-net-worth individuals, increasing wealth income taxation and broadening its personal finance services."
+
+ ### Battalion
+ HOL_marechaussee_support_tech: "Marechaussee Support Battalion"
+ HOL_marechaussee_support_tech_desc: "The Marechaussee Support Battalion combines logistics and military police capabilities, improving supply efficiency and increasing suppression."
+ HOL_marechaussee_support_company: "Marechaussee Support Battalion"
+ HOL_marechaussee_support_company_desc: "This special support battalion offers both supply chain management and law enforcement functions in the battlefield, improving logistics and providing suppression."
+ HOL_Establish_Marechaussee_Squad: "Establish Marechaussee Squad"
+ HOL_Establish_Marechaussee_Squad_desc: "The Marechaussee is a special military police force responsible for enforcing law and maintaining logistical operations. Establishing this unit will greatly improve both supply efficiency and suppression in our military operations."
