Some general fixes for MD

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -17,6 +17,7 @@ v1.10.5
   - Italian AI should no longer power push characters if they have the Mafia idea
   - Fixed the AI liberating stuff to Salafist. No, no, no silly western nations. ISIS shouldn't be stronger!
   - The Salafist peace deal AI should liberate salafist nation's cores as long as they also do not claim or have a core on the state
+  - European Union AI should now vote closer to their overlord if they are a subject
 
  Balance:
   - Added additional internal factions effects to a variety of different trees
@@ -68,6 +69,8 @@ v1.10.5
   - Fixed the cap of the Spanish Foreign Legion Tercio not properly updating as it was in the state scope
   - Fixed the BMPT terminator having the No Turret module installed
   - Fixed the Georges Leygues French ship from non-MTG having level 1 experience
+  - Fixed German air wing names for Spain
+  - Fixed the Scandinavian formable decisions not working appropriately
 
  Content:
   - Added additional decisions to a variety of different internal factions
@@ -88,6 +91,7 @@ v1.10.5
   - Improved the Foreign Legion mechanic for Spain giving it a reform option to make them slightly stronger
   - Added a claim to Gambia for the "Legacy of the Duchy" focus in Belarus
   - Changed the Opinion modifier for East Asia Summit called "Attended East Asia Summit" from the news event
+  - Egypt can now boost Al-Nour Party
 
  Database:
   - ADJUSTED PRODUCTIVITY: MIC, KOS, KAR, KAC, SHN, WAA, ABK, JUB, CHE, SOM, RYU
@@ -105,6 +109,7 @@ v1.10.5
 	The 3 baltic states, Afghanistan
   - New set of generic models for Eastern Europe, Africa, South America, Middle East
   - New tech and variant GFXs for multiple nations
+  - Fixed the broken icon for Panavia Germany
 
  Localization:
   - Fixed an error with Saddams Rage localization not appearing
