fixed Greater Serbia claims

--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -234,7 +234,7 @@
  SER_the_sick_woman_of_the_coalition: "The Sick Woman of the Coalition"
  SER_the_sick_woman_of_the_coalition_desc: "Milosevic's wife, Mirjana, has gained even more power from her husband's hands over political life in the country, now she influences Serbia more than ever before."
  SER_ratify_greater_serbia: "Ratify Greater Serbia"
- SER_ratify_greater_serbia_desc: "We shall declare Greater Serbia, first by claiming all necessary land, and then later by actually securing."
+ SER_ratify_greater_serbia_desc: "It is time we ratify Greater Serbia and lay our claim to the lands of Croatia, Bosnia and some of the regions of Western Bulgaria where our people currently reside. Our people need us and it is time we bring them back to the fold. We can focus on securing these territories later, but now is to show all Serbians we wish for their best intersts at heart. It is time to bring our people home."
  SER_full_milosevic_dictatorship: "Milosevic's Dictatorship"
  SER_full_milosevic_dictatorship_desc: "Milosevic finally admitted that the regime he created is a dictatorship. But is a dictatorship bad?."
  SER_shut_it_down_forcibly: "Shut Up The Opposition"
