--- a/Changelog.txt
+++ b/Changelog.txt
@@ -91,6 +91,7 @@ v1.10.5
   - Improved the Foreign Legion mechanic for Spain giving it a reform option to make them slightly stronger
   - Added a claim to Gambia for the "Legacy of the Duchy" focus in Belarus
   - Changed the Opinion modifier for East Asia Summit called "Attended East Asia Summit" from the news event
+  - Changed the claims for Greater Serbia correcting including Croatia and Bosnia
   - Egypt can now boost Al-Nour Party
 
  Database:
