--- a/localisation/english/MD_focus_TAJ_l_english.yml
+++ b/localisation/english/MD_focus_TAJ_l_english.yml
@@ -17,6 +17,9 @@
 
 # Decisions
 
+ TAJ_radicalism_system: ""
+ TAJ_radicalism_system_desc: ""
+
 # Tooltips
 
  TAJ_russian_influence_hurt_TT: "[SOV.GetFlag] Russian §HInfluence Multiplier§! in [TAJ.GetFlag] Tajikistan: §G-25%§!"
