--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8176,14 +8176,14 @@
  TAJ.Communist-State_desc: ""
  TAJ.Conservative: "£TAJ_emerging_reactionary  People's Democratic Party"
  TAJ.Conservative_icon: "£TAJ_emerging_reactionary"
- TAJ.Conservative_desc: "\n(Tajik Nationalism)\n\nPeople's Democratic Party of Tajikistan, (Tajik-Farsi, romanized: Hizbi Demokratii Tojikiston)\n\nSpearheaded by Emomali Rahmon, the People's Democratic Party of Tajikistan has led Tajikistan with an iron grip. Due to the dominance of the party in Tajikistan, opposition movements attempting to topple the government have sprung up all around Tajikistan. The party has been focused mainly on reviving Tajik culture, identity, and statehood. The party under Emomali Rahmon has heavily restricted Islamic practices in attempt to secularize Tajikistan, taking measures such as banning beards and creating dress codes for women who wish to wear the hijab."
+ TAJ.Conservative_desc: "\n(Tajik Nationalism)\n\nPeople's Democratic Party of Tajikistan, (Tajik-Farsi, romanized: Hizbi Demokratii Tojikiston)\n\nSpearheaded by Emomali Rahmon, the People's Democratic Party of Tajikistan has led Tajikistan with an iron grip. Due to the dominance of the party in Tajikistan, opposition movements attempting to topple the government have sprung up all around Tajikistan. The party has been focused mainly on reviving Tajik culture, identity, and statehood. The party under Emomali Rahmon has heavily restricted Islamic practices in an attempt to secularize Tajikistan, taking measures such as banning beards and creating dress codes for women who wish to wear the hijab."
  TAJ.anarchist_communism: "£TAJ_anarchist_communism Hizbi Sotsialistii Tojikiston"
  TAJ.anarchist_communism_icon: "£TAJ_anarchist_communism"
  TAJ.anarchist_communism_desc: ""
  TAJ.Caliphate: "£TAJ_salafist_jihadism Hizb ut-Tahrir Tajikistan"
  TAJ.Caliphate_icon: "£TAJ_salafist_jihadism"
  TAJ.Caliphate_desc: ""
- TAJ.Kingdom: "£TAJ_kingdom Hizbi Nahzati Islomii Tojikiston"
+ TAJ.Kingdom: "£TAJ_kingdom Hizbi ISI-K"
  TAJ.Kingdom_icon: "£TAJ_kingdom"
  TAJ.Kingdom_desc: ""
  TAJ.oligarchism: "£generic_oligarchism_small Hizbi Adolatkhoh"
@@ -8191,7 +8191,7 @@
  TAJ.neutral_Social: "£TAJ_non_aligned_socialist_democrat Hizbi agrarii Toçikiston"
  TAJ.neutral_Social_icon: "£TAJ_non_aligned_socialist_democrat"
  TAJ.neutral_Social_desc: ""
- TAJ.Neutral_Muslim_Brotherhood: "£TAJ_non_aligned_moderate_islamist Lali Badakhshan"
+ TAJ.Neutral_Muslim_Brotherhood: "£TAJ_kingdom (IRP) Islamic Renaissance Party" #Nahzati Islomii Tojikiston
  TAJ.Neutral_Muslim_Brotherhood_icon: "£TAJ_non_aligned_moderate_islamist"
  TAJ.Neutral_Muslim_Brotherhood_desc: ""
  TAJ.Nat_Populism: "£TAJ_western_conservative Democratic Party of Tajikistan"
