Dutch Event Chain

--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -654,6 +654,26 @@
  HOL_JSF_Grant_F35C.t: "F-35C Arrived"
  HOL_JSF_Grant_F35C.d: "With the completion of the 5th Generation Carrier-Capable Aircraft research, we can now deploy 50 units of the F-35C to serve in carrier operations."
  HOL_JSF_Grant_F35C.a: "Deploy the F-35C"
+ HOL_FAD.01.t: "Germany Joins the Future Air Defender Project"
+ HOL_FAD.01.d: "The German Navy has officially agreed to collaborate with the Netherlands on the Future Air Defender project, a joint effort to develop advanced destroyers capable of defending Europe’s skies and seas. With this partnership, we can look forward to strengthening both navies, following the legacy of joint operations such as NATO's Standing Naval Force."
+ HOL_FAD.01.a: "Proceed with Germany"
+ HOL_FAD.01.b: "Germany declines the project"
+ HOL_FAD.01_NET.t: "Germany Joins the Future Air Defender Project"
+ HOL_FAD.01_NET.d: "Germany has officially joined the Future Air Defender project. As a result, the Netherlands will receive two new destroyers, currently under construction. These ships, tentatively named the **HNLMS De Zeven Provinciën** and the **HNLMS Tromp**, will strengthen our naval capacity and continue our proud naval tradition."
+ HOL_FAD.01_NET.a: "Great news!"
+ HOL_FAD.06.t: "Scandinavia Joins the Future Air Defender Project"
+ HOL_FAD.06.d: "The Netherlands has approached the Scandinavian countries—Sweden, Denmark, and Norway—for their involvement in the Future Air Defender project. These nations have a long history of naval prowess, and their participation could bring cutting-edge technology and additional resources to the development of a joint European destroyer fleet."
+ HOL_FAD.06.a: "Collaborate with Scandinavia"
+ HOL_FAD.06.b: "Scandinavia declines"
+ HOL_FAD.06_SWE.t: "Sweden Joins the Future Air Defender Project"
+ HOL_FAD.06_SWE.d: "Sweden has agreed to collaborate on the Future Air Defender project, further strengthening our efforts. As a result, the Netherlands will receive another destroyer, tentatively named the **HNLMS Johan de Witt**, after one of the greatest statesmen and naval administrators in Dutch history."
+ HOL_FAD.06_SWE.a: "A historic partnership!"
+ HOL_FAD.06_DEN.t: "Denmark Joins the Future Air Defender Project"
+ HOL_FAD.06_DEN.d: "Denmark has agreed to join forces on the Future Air Defender project. The Danes, with their long-standing naval history, will provide valuable expertise. The Netherlands will receive another destroyer as part of the collaboration, tentatively named the **HNLMS Van Galen**, after the famed Dutch admiral who defended the Netherlands during the Anglo-Dutch wars."
+ HOL_FAD.06_DEN.a: "Denmark strengthens our fleet!"
+ HOL_FAD.06_NOR.t: "Norway Joins the Future Air Defender Project"
+ HOL_FAD.06_NOR.d: "Norway has agreed to join the Future Air Defender project, bringing their own experience in Arctic and Northern naval operations to the table. The Netherlands will benefit from their contribution, receiving an additional destroyer, tentatively named the **HNLMS Karel Doorman**, after our renowned admiral who helped shape the modern Dutch Navy."
+ HOL_FAD.06_NOR.a: "Norway secures our northern flank!"
  ### Decisions
  HOL_ING_Group_strategy_category: "ING Group Strategies"
  HOL_ING_Group_strategy_category_desc: "As global economic cycles shift between periods of growth and recession, ING Bank is poised to capitalize on these fluctuations. Through a series of calculated financial maneuvers, ING can extend its influence over national and international markets, steering both recovery efforts and expansion booms. These decisions offer the Netherlands the ability to leverage the bank's financial clout to stimulate growth, manage risk, and maximize investment returns. By strategically adjusting loan policies, boosting consumer spending, and expanding global trade networks, ING will not only strengthen its market position but also solidify the Netherlands' standing as a financial powerhouse."
