Fixed the bug about SCO military manoeuvres

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -71,6 +71,7 @@ v1.10.5
   - Fixed the Georges Leygues French ship from non-MTG having level 1 experience
   - Fixed German air wing names for Spain
   - Fixed the Scandinavian formable decisions not working appropriately
+  - Fixed Shanghai Cooperation Organisation States could can start military manoeuvres permanently after annexed the target country
 
  Content:
   - Added additional decisions to a variety of different internal factions
