some small fixes

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -72,6 +72,7 @@ v1.10.5
   - Fixed German air wing names for Spain
   - Fixed the Scandinavian formable decisions not working appropriately
   - Fixed Shanghai Cooperation Organisation States could can start military manoeuvres permanently after annexed the target country
+  - Former NATO members should no longer be NATO members if they're subjects
 
  Content:
   - Added additional decisions to a variety of different internal factions
