--- a/Changelog.txt
+++ b/Changelog.txt
@@ -38,6 +38,7 @@ v1.10.5
   - Adjusted the limit for 1000 debt being taken to where you need 1500 GDP Total
   - Added +100 weekly manpower to the Foreign Jihadists Internal Faction to make them stronger
   - Belarus' Agriculture Idea now grants bonus income to Commercialized Agriculture Districts
+  - Slightly increased the income from all resource exports. Should make the resource income a bit more substantial for resource heavy nations
 
  Bugfix:
   - Fixed the missing model errors from TOTA (added blank asset files)
