--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -445,7 +445,7 @@
  DEN_Copenhagen_Malmo_Port: "Copenhagen Molmö Port"
  DEN_Copenhagen_Malmo_Port_desc: "Denmark and Sweden collaborate on the development of the Copenhagen-Malmö Port, a strategic maritime hub connecting the two cities and facilitating trade and commerce in the Baltic Sea region. By investing in port infrastructure, logistics facilities, and intermodal transport links, the governments aim to enhance regional competitiveness, stimulate economic growth, and strengthen cross-border cooperation."
  DEN_expand_the_Port: "Expand the Port"
- DEN_expand_the_Port_desc: "The succes of the Copenhagen Molmö Port make us highly confident, a further expansion of the Port will be a usefull step"
+ DEN_expand_the_Port_desc: "The success of the Copenhagen Molmö Port make us highly confident, a further expansion of the Port will be a useful step"
  DEN_more_Imports: "Increase Import capacity"
  DEN_more_Imports_desc: "The succes of the Copenhagen Molmö Port make us highly confident, a further expansion of the Import capability will be a usefull step"
  DEN_more_exports: "Increase Export capacity"
