--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8183,7 +8183,7 @@
  TAJ.Caliphate: "£TAJ_salafist_jihadism Hizb ut-Tahrir Tajikistan"
  TAJ.Caliphate_icon: "£TAJ_salafist_jihadism"
  TAJ.Caliphate_desc: ""
- TAJ.Kingdom: "£TAJ_kingdom Hizbi ISI-K"
+ TAJ.Kingdom: "£generic_Caliphate_small (IS-KP) Islamic State - Khorasan"
  TAJ.Kingdom_icon: "£TAJ_kingdom"
  TAJ.Kingdom_desc: ""
  TAJ.oligarchism: "£generic_oligarchism_small Hizbi Adolatkhoh"
