--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -1602,6 +1602,10 @@
  IRQ_badr_revolt: "Munazzama Badr"
  IRQ_badr_revolt_DEF: "Munazzama Badr"
  IRQ_badr_revolt_ADJ: "Iraqi"
+ #TAJ
+ TAJ_islamist_government: "Islamic Emirate of Tajikistan"
+ TAJ_islamist_government_DEF: "the Islamic Emirate of Tajikistan"
+ TAJ_islamist_government_ADJ: "Tajik"
  #BAN
  BAN_REB_democratic: "Bangladesh Armed Forces"
  BAN_REB_democratic_ADJ: "Bangladeshi"
