--- a/localisation/english/MD_focus_TAJ_l_english.yml
+++ b/localisation/english/MD_focus_TAJ_l_english.yml
@@ -12,18 +12,58 @@
  TAJ_good_thoughts_good_words_good_deeds_desc: "One of the factions that fought in the civil war back in the 1990's, the Democratic Party of Tajikistan upholds Pan-Iranist and nationalist values and vows to put Tajikistan at the top of regional politics and power."
 
 # Spirits
+ TAJ_national_guard_deployed: "Tajik National Guard"
+ TAJ_national_guard_deployed_desc: "The state has decided that Islamist political activity must be dealt with. We are using the National Guard to ensure that they slowly fall apart and retreat to their homes.\n§W------------------§!\nWhile this national spirit is active, £TAJ_kingdom  §HIRP Influence§! will be reduced by §G-1%§! every month."
+ TAJ_military_infancy: "Military Infancy"
+ TAJ_military_infancy_desc: "Unlike other post-Soviet states, [TAJ.GetFlag] Tajikistan did not build it's army from Soviet Units stationed within the nation. Rather, [TAJ.GetFlag] Tajikistan chose to build an army from scratch, disbanding all units that weren't made by the state. This has led to an in-experienced army that has not fought in a major conflict outside of an internal one.\n§W------------------§!\nThis national spirit can be §RRemoved§! if we go down the '§HArmed Forces of Tajikistan§!' branch in the §HFocus Tree§!."
+ TAJ_flight_of_labor: "Flight of Labor"
+ TAJ_flight_of_labor_desc: "Economic instability has led to 50% of the male population immigrating to countries such as [SOV.GetFlag] [SOV.GetName] just to find work. While this practice could benefit individual families, the [TAJ.GetFlag] Tajik economy ultimately hurts the most as a result of a lack of skilled labor. Furthermore, some men abroad begin attending foreign mosques and are more prone to islamic extremism, leading to occasional incidents.\n§W------------------§!\nThis national spirit will be §RRemoved§! if our §HGDP/c§! exceeds §H$10B§!.\n§W------------------§!\nRemoval of this national spirit will allow us to end the §HEchoes of the Ummah§! and the £TAJ_kingdom  §HIRP Influence§! campaigns."
+ TAJ_woes_of_the_civilwar: "Woes of the Civil War"
+ TAJ_woes_of_the_civilwar_desc: "In 1992, our state collapsed into a 5 year long civil war, where Tajik fought against Tajik. Opposition groups to the central government unified under the UTO (Unitied Tajik Opposition), with some secession movements arising in the [BDA.GetFlag] Badakhshan region. Once the Civil War was concluded, the £TAJ_emerging_reactionary  People's Democratic Party signed a treaty with multiple groups from the UTO, such as the £TAJ_kingdom  Islamic Renaissance Party and the £TAJ_western_conservative Democratic Party of Tajikistan, granting some concessions in exchange for a ceasefire.\n§W------------------§!\nThis national spirit will be §RRemoved§! if we change §HCountry Outlook§!, or we conclude the [BDA.GetFlag] §HBadakhshan Conflict§!."
+ TAJ_201st_base: "201st Military Base"
+ TAJ_201st_base_desc: "The 201st Military Base has been critical in our nations short history thus far, as the base serves as a hub of [SOV.GetFlag] Russian influence, and protection even though we do not border them. The 201st Rifle Division of the [SOV.GetFlag] Russian army is currently stationed in the base, and they offer our troops occasional training against a potential [TAL.GetFlag] [AFG.GetFlag] Afghan invasion of [TAJ.GetFlag] Tajikistan. They also pay us a lease which contributes towards our economy.\n§W------------------§!\nThis national spirit will be §RRemoved§! if we §HEnd the Lease§!, or we enter §HConflict with [SOV.GetFlag] Russia§!."
 
 # Events
 
 # Decisions
-
- TAJ_radicalism_system: ""
- TAJ_radicalism_system_desc: ""
+ TAJ_radicalism_system: "Echoes of the Ummah"
+ TAJ_radicalism_system_desc: "\n£TAJ_desctext_irp\n\n\n\nPoverty, corruption, nepotism and unemployment are amongst the grievances our people have held against our government. However, one stands above them all and is the final straw for many. Our suppression of Islamic practices have led some of our people to believe that religion is the answer to the problems within \n§H[TAJ.GetFlag] Tajikistan§!, and strongly believe a new state must emerge from our land. Some join groups such as the £TAJ_kingdom  §HIslamic Renaissance Party§!, and despite not being an active insurgency, occasional strings of attacks may appear randomly linked to the organization. Economic factors such as low GDP, or unemployment, make people more likely to leave the nation and potentially become radicalized. Certain political actions such as secularization may increase £TAJ_kingdom  §HIRP Influence§!. If at any point £TAJ_kingdom  §HIRP Influence§! reaches 100%, movements will appear that will attempt to destabilize us, the region and our close partners.\n\nCurrent £TAJ_kingdom  §HIRP§! Influence: [?TAJ_radical_influence]%"
+ TAJ_deploy_national_guard: "Deploy the National Guard"
+ TAJ_deploy_national_guard_desc: "By deploying the National Guard we can ensure that Islamist's political activities are cracked down upon, but it may be a costly endeavor to do so."
+ TAJ_recall_national_guard: "Recall the National Guard"
+ TAJ_recall_national_guard_desc: "By calling the National Guard back, Islamist political activities may begin to climb once more, but at least we will have some money left in our treasury."
 
 # Tooltips
-
+ TAJ_random_prod_damage_TT: "Reduces §HProductivity§! in a random state by §H-25§!"
+ TAJ_increase_IRP_influence_TT: "§RWill occasionally increase§! £TAJ_kingdom  §HIRP Influence§!"
+ TAJ_military_inf_TT: "§RCannot declare wars.\nCannot train units, disband units, or edit unit templates.§!"
+ TAJ_concessions_civilwar_TT: "§RCannot manually lower§! £TAJ_kingdom  §HIslamic Renaissance Party§!§R's popularity§!\n§RCannot manually lower§! £TAJ_western_conservative §HDemocratic Party of Tajikistan§!§R's popularity§!\n§RCannot ban either party§!"
+ TAJ_decrease_irp_influence_1_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-1§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_decrease_irp_influence_2_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-2§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_decrease_irp_influence_3_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-3§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_decrease_irp_influence_4_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-4§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_decrease_irp_influence_5_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-5§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_decrease_irp_influence_6_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-6§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_decrease_irp_influence_7_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-7§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_decrease_irp_influence_8_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-8§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_decrease_irp_influence_9_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-9§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_decrease_irp_influence_10_TT: "Will decrease £TAJ_kingdom  §HIRP Influence§! by §H-10§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_1_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+1§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_2_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+2§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_3_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+3§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_4_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+4§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_5_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+5§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_6_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+6§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_7_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+7§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_8_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+8§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_9_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+9§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_increase_irp_influence_10_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+10§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
+ TAJ_IRP_takeover_TT: "£TAJ_kingdom  §HIslamic Renaissance Party§! becomes the ruling party"
+ TAJ_nat_guard_TT: "While this national spirit is active, £TAJ_kingdom  §HIRP Influence§! will be reduced by §G-1%§! every month."
+ TAJ_civilwar_TT: "The §H[TAJ.GetFlag] Tajik State§! will Collapse into a §RCivil War§!!"
  TAJ_russian_influence_hurt_TT: "[SOV.GetFlag] Russian §HInfluence Multiplier§! in [TAJ.GetFlag] Tajikistan: §G-25%§!"
- TAJ_25_prod_every_state_TT: "Will increase §HProductivity§! in every state by §H25§!"
+ TAJ_201st_base_TT: "[SOV.GetFlag] Russian §HInfluence Multiplier§! in [TAJ.GetFlag] Tajikistan: §R+35%§!\nAdditional income from lease: §G+$0.350§!"
+ TAJ_25_prod_every_state_TT: "will increase §HProductivity§! in every state by §H25§!"
  TAJ_tree_playable_if_not_democratic_TT: "This §HTree§! will be §HAvailable§! even if we §HChange Parties§!\n\nWe will §RNOT§! be able to disable §HElections§!\n\n§HEvents§! will appear that give §HPopularity§! to §HRandom Parties§!"
  TAJ_one_party_state_TT: "Will become a §HOne-Party State§!"
  TAJ_every_muslim_neighbor_TT: "Gives §H5% Influence§! on every §HMuslim§! Neighbor"
@@ -32,3 +72,5 @@
  TAJ_unlock_pamir_core_decisions_TT: "£decision_icon_small §YUnlocks§! Pamir Integration §YDecisions§!"
 
 # Misc
+ TAJ_local_militias: "Local Militias"
+ TAJ_local_militias_desc: "Local Militias have decided to take up arms and prepare in the case of an invasion of our homeland!"
