more tank designer merger work

--- a/localisation/english/replace/replaced_from_designer_l_english.yml
+++ b/localisation/english/replace/replaced_from_designer_l_english.yml
@@ -81,3 +81,20 @@
  NAME_THEME_MODERN_ATTACK_SUBMARINES: "Modern Attack Submarines"
  NAME_THEME_MODERN_HELICOPTER_CARRIERS: "Modern Helicopter Carriers"
  NAME_THEME_MODERN_SUBMARINES: "Modern Submarines"
+
+ tank_designer_medium_tank_chassis: "Main Battle Tank"
+ tank_designer_medium_tank_chassis_role_disallowed: "Remove the module that forbids the $tank_designer_medium_tank_chassis|H$ role to be able to switch to it."
+ tank_designer_amphibious_tank_chassis: "Amphibious Tank"
+ tank_designer_amphibious_tank_chassis_role_disallowed: "Remove the module that forbids the $tank_designer_amphibious_tank_chassis|H$ role to be able to switch to it."
+ tank_designer_amphibious: "Armored Personel Carrier"
+ tank_designer_amphibious_role_disallowed: "Add a module that allows the §HAmphibious§! role to be able to switch to it."
+ tank_designer_anti_air: "Self Propelled Anti-Air"
+ tank_designer_anti_air_role_disallowed: "Add a module that allows the §HAnti-Air§! role to be able to switch to it."
+ tank_designer_artillery: "Self Propelled Artillery"
+ tank_designer_artillery_role_disallowed: "Add a module that allows the §HArtillery§! role to be able to switch to it."
+ tank_designer_anti_tank: "Light Tank"
+ tank_designer_anti_tank_role_disallowed: "Add a module that allows the §HTank Destroyer§! role to be able to switch to it."
+ tank_designer_rocket: "MLRS"
+ tank_designer_rocket_role_disallowed: "Add a module that allows the §HRocket Artillery§! role to be able to switch to it."
+ tank_designer_flame: "Infantry Fighting Vehicle"
+ tank_designer_flame_role_disallowed: "Add a module that allows the §HFlame§! role to be able to switch to it."
