An ass ton of stuff, too much to list out
Billions must Tajikistan

--- a/localisation/english/MD_countries_cosmetic_l_english.yml
+++ b/localisation/english/MD_countries_cosmetic_l_english.yml
@@ -1606,6 +1606,9 @@
  TAJ_islamist_government: "Islamic Emirate of Tajikistan"
  TAJ_islamist_government_DEF: "the Islamic Emirate of Tajikistan"
  TAJ_islamist_government_ADJ: "Tajik"
+ TAJ_islamist_government_2: "Islamic State in Khorasan"
+ TAJ_islamist_government_2_DEF: "the Islamic State in Khorasan"
+ TAJ_islamist_government_2_ADJ: "Muslim"
  #BAN
  BAN_REB_democratic: "Bangladesh Armed Forces"
  BAN_REB_democratic_ADJ: "Bangladeshi"
