--- a/localisation/english/MD_focus_TAJ_l_english.yml
+++ b/localisation/english/MD_focus_TAJ_l_english.yml
@@ -16,14 +16,91 @@
  TAJ_national_guard_deployed_desc: "The state has decided that Islamist political activity must be dealt with. We are using the National Guard to ensure that they slowly fall apart and retreat to their homes.\n§W------------------§!\nWhile this national spirit is active, £TAJ_kingdom  §HIRP Influence§! will be reduced by §G-1%§! every month."
  TAJ_military_infancy: "Military Infancy"
  TAJ_military_infancy_desc: "Unlike other post-Soviet states, [TAJ.GetFlag] Tajikistan did not build it's army from Soviet Units stationed within the nation. Rather, [TAJ.GetFlag] Tajikistan chose to build an army from scratch, disbanding all units that weren't made by the state. This has led to an in-experienced army that has not fought in a major conflict outside of an internal one.\n§W------------------§!\nThis national spirit can be §RRemoved§! if we go down the '§HArmed Forces of Tajikistan§!' branch in the §HFocus Tree§!."
- TAJ_flight_of_labor: "Flight of Labor"
- TAJ_flight_of_labor_desc: "Economic instability has led to 50% of the male population immigrating to countries such as [SOV.GetFlag] [SOV.GetName] just to find work. While this practice could benefit individual families, the [TAJ.GetFlag] Tajik economy ultimately hurts the most as a result of a lack of skilled labor. Furthermore, some men abroad begin attending foreign mosques and are more prone to islamic extremism, leading to occasional incidents.\n§W------------------§!\nThis national spirit will be §RRemoved§! if our §HGDP/c§! exceeds §H$10B§!.\n§W------------------§!\nRemoval of this national spirit will allow us to end the §HEchoes of the Ummah§! and the £TAJ_kingdom  §HIRP Influence§! campaigns."
+ TAJ_flight_of_labor: "Exodus of the Workforce"
+ TAJ_flight_of_labor_desc: "Economic instability has led to 50% of the male population immigrating to countries such as [SOV.GetFlag] [SOV.GetName] just to find work. While this practice could benefit individual families, the [TAJ.GetFlag] Tajik economy ultimately hurts the most as a result of a lack of skilled labor. Furthermore, some men abroad begin attending foreign mosques and are more prone to islamic extremism, leading to occasional incidents.\n§W------------------§!\nThis national spirit will be §RRemoved§! if our §HGDP/c§! exceeds §H$10K§!.\n§W------------------§!\nRemoval of this national spirit will allow us to end the §HEchoes of the Ummah§! and the £TAJ_kingdom  §HIRP Influence§! campaigns."
  TAJ_woes_of_the_civilwar: "Woes of the Civil War"
  TAJ_woes_of_the_civilwar_desc: "In 1992, our state collapsed into a 5 year long civil war, where Tajik fought against Tajik. Opposition groups to the central government unified under the UTO (Unitied Tajik Opposition), with some secession movements arising in the [BDA.GetFlag] Badakhshan region. Once the Civil War was concluded, the £TAJ_emerging_reactionary  People's Democratic Party signed a treaty with multiple groups from the UTO, such as the £TAJ_kingdom  Islamic Renaissance Party and the £TAJ_western_conservative Democratic Party of Tajikistan, granting some concessions in exchange for a ceasefire.\n§W------------------§!\nThis national spirit will be §RRemoved§! if we change §HCountry Outlook§!, or we conclude the [BDA.GetFlag] §HBadakhshan Conflict§!."
  TAJ_201st_base: "201st Military Base"
  TAJ_201st_base_desc: "The 201st Military Base has been critical in our nations short history thus far, as the base serves as a hub of [SOV.GetFlag] Russian influence, and protection even though we do not border them. The 201st Rifle Division of the [SOV.GetFlag] Russian army is currently stationed in the base, and they offer our troops occasional training against a potential [TAL.GetFlag] [AFG.GetFlag] Afghan invasion of [TAJ.GetFlag] Tajikistan. They also pay us a lease which contributes towards our economy.\n§W------------------§!\nThis national spirit will be §RRemoved§! if we §HEnd the Lease§!, or we enter §HConflict with [SOV.GetFlag] Russia§!."
+ TAJ_tajik_barrier: "Tajik Barrier"
+ TAJ_tajik_barrier_desc: "Our nation serves as a barrier for us, as our high mountains slow the spread of dangerous ideas and beliefs, even in such a connected world in the modern day."
+ TAJ_legacy_of_uto_idea: "Legacy of the UTO"
+ TAJ_legacy_of_uto_idea_desc: "The legacy of the UTO resonates strongly with our party members and people, as we will never forget the sacrifices brave men made on the battlefield."
+ TAJ_revolutionary_patrionism: "Revolutionary Patriotism"
+ TAJ_revolutionary_patrionism_desc: "The highest of form of patriotism comes from recognizing and embracing the new order, and government."
+ TAJ_orionbank: "Orienbank"
+ TAJ_orionbank_desc: "Being established in 1925, Orienbank is the oldest bank in Tajikistan, serving as an important institution for our nations economy."
+ TAJ_distrupted_commerce: "Disrupted Commerce"
+ TAJ_distrupted_commerce_desc: "Terrorists have attacked major financial institutions and have caused a slow down in our economy."
+ TAJ_isik: "IS-KP"
+ TAJ_isik_desc: "IS-KP, also known as Islamic State in Khorasan Province has began a struggle against our government, and others in the region, and have vowed to overthrow our state and those they deem as 'infidels' and 'heretics'.\n§W------------------§!\nThis national spirit will be §RRemoved§! if we bring our §HTerror Threat§! to §GNegligible§! and our §HRadicalization§! to §GLow§!.\n§W------------------§!\nWhile this national spirit is active, §RIS-KP§! will launch a §RCivil War§! if §HSalafism Ideology§! exceeds 20%."
 
 # Events
+ tajik_radicalism.1.t: "Islamic Renaissance Party Demands our Resignation"
+ tajik_radicalism.1.d: "Leaders from the Islamic Renaissance Party have written a formal letter demanding our governments resignation, and the transfer of power to "righteous institutions". In their letter, they stated that they are armed and ready, and at a moments notice they can mobilize an army to topple our state. How we should approach these radicals is up to the central government now.."
+ tajik_radicalism.1.a: "Maybe it's time.."
+ tajik_radicalism.1.b: "It's time to put those radicals in their place!"
+ tajik_radicalism.2.t: "Underground Madrassas Begin Popping Up"
+ tajik_radicalism.2.d: "Rumours of secret underground madrassas have been circulating in government circles, and many debates have sprung up about how we must deal with them going forward."
+ tajik_radicalism.2.a: "Shut them down!"
+ tajik_radicalism.2.b: "They aren't a threat"
+ tajik_radicalism.3.t: "Religious Sermon Turns Political"
+ tajik_radicalism.3.d: "Recently friday prayer has been turning more and more political, with religious leaders talking about the state of the nation, portraying our government as corrupt and incapable of administering the nation."
+ tajik_radicalism.3.a: "Arrest them"
+ tajik_radicalism.3.b: "They aren't a threat"
+ tajik_radicalism.4.t: "Mosque Charities Expand"
+ tajik_radicalism.4.d: "Mosques have had charities for a very long time now, but recently they have been expanding their networks and they have been getting funds from unknown individuals."
+ tajik_radicalism.4.a: "The money is rightful state property"
+ tajik_radicalism.4.b: "They aren't a threat"
+ tajik_radicalism.5.t: "Secret Religious Circles Form"
+ tajik_radicalism.5.d: "Recently secret religious circles have began forming, where individuals would attend and discuss religious matters. Within these circles, there have been rumours that some talk negatively of the government."
+ tajik_radicalism.5.a: "Launch investigations"
+ tajik_radicalism.5.b: "They aren't a threat"
+ tajik_radicalism.6.t: "Confrontations with Military Personnel Near Mosques"
+ tajik_radicalism.6.d: "There has been an uptick of military personnel getting harassed near mosques, where religious fanatics would attack our troops throwing rocks or spitting on them."
+ tajik_radicalism.6.a: "Tell the personnel to be more cautious"
+ tajik_radicalism.6.b: "They can fend for themselves"
+ tajik_radicalism.7.t: "Uptick in Attacks Against Police"
+ tajik_radicalism.7.d: "Disobedient and unruly locals have been attacking police and raiding certain police stations, inflicting casualties nationwide. The situation has gotten out of hand, and will only continue to get worse.."
+ tajik_radicalism.7.a: "Reinforce the police"
+ tajik_radicalism.7.b: "They can fend for themselves"
+ tajik_radicalism.8.t: "Locals Resist Government Patrols"
+ tajik_radicalism.8.d: "In the country side, more and more locals have started resisting police patrols by putting large rocks in the way of vehicles. Some are stating that this is a sign of weakness on behalf of the government, and that the state is losing its grip on the population."
+ tajik_radicalism.8.a: "State propaganda will solve all of this"
+ tajik_radicalism.8.b: "Just go around the rocks"
+ tajik_radicalism.9.t: "Uptick in Radical Tajiks Returning From Abroad"
+ tajik_radicalism.9.d: "There has been an unusual spike in radicalized Tajiks returning from abroad, and there have been fears in government circles that these individuals would spread their dangerous ideology."
+ tajik_radicalism.9.a: "Send them back, we don't want them"
+ tajik_radicalism.9.b: "They aren't a threat"
+ tajik_radicalism.10.t: "Government Convoy Ambushed"
+ tajik_radicalism.10.d: "Reports are indicating that a government convoy was ambushed in a remote village by armed militants of an organization linked to the Islamic Renaissance Party."
+ tajik_radicalism.10.a: "Reinforce them"
+ tajik_radicalism.10.b: "Pull back"
+ tajik_radicalism.11.t: "Military Base Attacked"
+ tajik_radicalism.11.d: "Reports are indicating that a military base was recently attacked by fanatics in a remote area near the southern border. Some are indicating that the militants could potentially be linked to the Islamic Renaissance Party."
+ tajik_radicalism.11.a: "Send reinforcements"
+ tajik_radicalism.11.b: "Pull back"
+ tajik_radicalism.12.t: "Terror Attack in Russia"
+ tajik_radicalism.12.d: "Russian state media is reporting that Tajik militants have recently attacked city infrastructure, and caused considerable damage to the surrounding area. The Russian government is demanding reparations for both the victims, and the damaged city infrastructure."
+ tajik_radicalism.12.a: "We'll pay for the damages"
+ tajik_radicalism.12.b: "Not my problem"
+ tajik_radicalism.120.t: "Terror Attack Linked to Tajik Nationals"
+ tajik_radicalism.120.d: "The Tajik government has recently apologized, and paid for the damages caused by an attack conducted on Russian soil by a Tajik national. The attack damaged city infrastructure, and claimed some lives, however the Tajik government has offered to pay for the damages and victims."
+ tajik_radicalism.120.a: "Okay"
+ tajik_radicalism.121.t: "Terror Attacked Linked to Tajik Nationals"
+ tajik_radicalism.121.d: "State media is reporting that terrorists suspected to be Tajik nationals have caused some damage in one of our cities, inflicting some casualties. The Tajik government has refused to pay for any of the damage but have claimed that "our hearts go to the victims"."
+ tajik_radicalism.121.a: "A sad day for our nation.."
+ tajik_radicalism.14.t: "Dangerous Ideas Spread in Bazaars"
+ tajik_radicalism.14.d: "In certain bazaars across the nation some individuals have began denouncing the government, and our laws through loud speaker. This has caused some fear within the central government, as these people often draw considerable crowds."
+ tajik_radicalism.14.a: "Temporarily close those bazaars!"
+ tajik_radicalism.14.b: "They aren't a threat"
+ tajik_radicalism.15.t: "A New Movement Begins to Form"
+ tajik_radicalism.15.d: "Ever since the IRP was shunned from political life by the central government in Tajikistan, some members of the organization, and sympathizers for the movement have begun to rally around a new flag and group. They go by the Islamic State in Khorasan, and have vowed to topple our government, and others in the region. This means that the organization has ambitions that put Tajikistan, Afghanistan, Iran, and other nations in the region within their crosshair."
+ tajik_radicalism.15.a: "We will crush them!"
+ tajik_radicalism.16.t: "Islamic State in Khorasan Launch Large Scale Attacks!"
+ tajik_radicalism.16.d: "IS-KP has announced the creation of it's caliphate in the north of the nation, in the province of Sughd. They claim that they will 'topple' the 'heretical' and 'anti-islamic' regime of [TAJ.GetLeader]. Our failed attempts at suppressing Salafist ideology and thought have culminated in this event, where now our soldiers are mobilizing to launch an attack against the radicals who threaten our very existence now."
+ tajik_radicalism.16.a: "Prepare the troops"
+ tajik_radicalism.16.b: "The time has come"
 
 # Decisions
  TAJ_radicalism_system: "Echoes of the Ummah"
@@ -32,8 +109,19 @@
  TAJ_deploy_national_guard_desc: "By deploying the National Guard we can ensure that Islamist's political activities are cracked down upon, but it may be a costly endeavor to do so."
  TAJ_recall_national_guard: "Recall the National Guard"
  TAJ_recall_national_guard_desc: "By calling the National Guard back, Islamist political activities may begin to climb once more, but at least we will have some money left in our treasury."
+ TAJ_ban_the_irp: "Denounce the £TAJ_kingdom  Islamic Renaissance Party"
+ TAJ_ban_the_irp_desc: "The time has come for our government to publicly denounce the £TAJ_kingdom  Islamic Renaissance Party, and prohibit it from engaging in extensive political activities against the state."
+ TAJ_radicalism_system_2: "Shockwave From the Ummah"
+ TAJ_radicalism_system_2_desc: "\n£AFG_menu1\n\n\n\nThe downfall of the £TAJ_kingdom  §HIslamic Renaissance Party§!, and the continued progress of Tajik society has led to the rise of new extremist movements more radical than that of their predecessors. £generic_Caliphate_small §H(IS-KP) Islamic State - Khorasan§! has now risen to fill the void left by the fall of the IRP, and they are much more radical than they ever were. We must limit the growth of Salafist ideology in our nation, and keep it §Hbelow 20%§! at all times. At any point if Salafist popularity is more than §H20%§!, then [TAJ.GetFlag] Tajikistan will devolve into a civil war. We will be able to end this insurgency if we bring our §HTerror Threat§! to §GNegligible§! and our §HRadicalization§! to §GLow§!."
+ TAJ_open_menu: "Open International Systems Menu"
+ TAJ_open_menu_desc: "Confused where to locate our current Radicalism and Terror Threat? Locate the globe icon on the bottom right of your screen, or click this decision and head to the 'Counter-Terror' tab."
+ TAJ_arrest_iskp: "Arrest £generic_Caliphate_small  IS-KP Leadership"
+ TAJ_arrest_iskp_desc: "Due to their lack of support, we are able to easily get locals to give out the locations of IS-KP leadership in the nation and arrest them."
 
 # Tooltips
+ TAJ_rad_TT: "§HRadicalization§! is §GLow§!"
+ TAJ_ter_TT: "§HTerror Threat§! is §GNegligible§!"
+ TAJ_irp_ended_TT: "The £TAJ_kingdom  §HIslamic Renaissance Party§! will be unable to spread it's influence"
  TAJ_random_prod_damage_TT: "Reduces §HProductivity§! in a random state by §H-25§!"
  TAJ_increase_IRP_influence_TT: "§RWill occasionally increase§! £TAJ_kingdom  §HIRP Influence§!"
  TAJ_military_inf_TT: "§RCannot declare wars.\nCannot train units, disband units, or edit unit templates.§!"
@@ -58,7 +146,8 @@
  TAJ_increase_irp_influence_8_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+8§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
  TAJ_increase_irp_influence_9_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+9§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
  TAJ_increase_irp_influence_10_TT: "Will increase £TAJ_kingdom  §HIRP Influence§! by §H+10§!\n(Current Influence: §H[?TAJ_radical_influence]%§!)"
- TAJ_IRP_takeover_TT: "£TAJ_kingdom  §HIslamic Renaissance Party§! becomes the ruling party"
+ TAJ_IRP_takeover_TT: "£TAJ_kingdom  §H(IRP) Islamic Renaissance Party§! becomes the ruling party"
+ TAJ_ISK_takeover_TT: "£generic_Caliphate_small §H(IS-KP) Islamic State - Khorasan§! becomes the ruling party"
  TAJ_nat_guard_TT: "While this national spirit is active, £TAJ_kingdom  §HIRP Influence§! will be reduced by §G-1%§! every month."
  TAJ_civilwar_TT: "The §H[TAJ.GetFlag] Tajik State§! will Collapse into a §RCivil War§!!"
  TAJ_russian_influence_hurt_TT: "[SOV.GetFlag] Russian §HInfluence Multiplier§! in [TAJ.GetFlag] Tajikistan: §G-25%§!"
@@ -74,3 +163,5 @@
 # Misc
  TAJ_local_militias: "Local Militias"
  TAJ_local_militias_desc: "Local Militias have decided to take up arms and prepare in the case of an invasion of our homeland!"
+ TAJ_emomali_rahom_desc: "Emomali Rahmonov is the long-serving President of Tajikistan, having been in power since 1992. He rose to prominence after the fall of the Soviet Union and the outbreak of the Tajik Civil War (1992-1997), during which he consolidated his rule by defeating various opposition factions, including Islamist and pro-democracy forces. Rahmonov has maintained a highly centralized and authoritarian government, often using repression to suppress political dissent and media freedom. Under Rahmonov, Tajikistan has remained a close ally of Russia and has struggled with economic challenges, relying heavily on remittances from Tajik migrant workers abroad, especially in Russia. His administration has also been marked by efforts to promote national unity through the promotion of Tajik identity and language, distancing from Russian cultural influences, while also combating radical Islamic movements within the country."
+ TAJ_emomali_rahom_desc2: "Emomali Rahmon is the long-serving President of Tajikistan, having been in power since 1992. He rose to prominence after the fall of the Soviet Union and the outbreak of the Tajik Civil War (1992-1997), during which he consolidated his rule by defeating various opposition factions, including Islamist and pro-democracy forces. Rahmon has maintained a highly centralized and authoritarian government, often using repression to suppress political dissent and media freedom. Under Rahmon, Tajikistan has remained a close ally of Russia and has struggled with economic challenges, relying heavily on remittances from Tajik migrant workers abroad, especially in Russia. His administration has also been marked by efforts to promote national unity through the promotion of Tajik identity and language, distancing from Russian cultural influences, while also combating radical Islamic movements within the country."
