--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -8174,9 +8174,9 @@
  TAJ.Communist-State: "£TAJ_emerging_communism Hizbi Kommunistiyi Tojikiston"
  TAJ.Communist-State_icon: "£TAJ_emerging_communism"
  TAJ.Communist-State_desc: ""
- TAJ.Conservative: "£TAJ_emerging_reactionary  People's Democratic Party"
+ TAJ.Conservative: "£TAJ_emerging_reactionary  (PDP) People's Democratic Party"
  TAJ.Conservative_icon: "£TAJ_emerging_reactionary"
- TAJ.Conservative_desc: "\n(Tajik Nationalism)\n\nPeople's Democratic Party of Tajikistan, (Tajik-Farsi, romanized: Hizbi Demokratii Tojikiston)\n\nSpearheaded by Emomali Rahmon, the People's Democratic Party of Tajikistan has led Tajikistan with an iron grip. Due to the dominance of the party in Tajikistan, opposition movements attempting to topple the government have sprung up all around Tajikistan. The party has been focused mainly on reviving Tajik culture, identity, and statehood. The party under Emomali Rahmon has heavily restricted Islamic practices in an attempt to secularize Tajikistan, taking measures such as banning beards and creating dress codes for women who wish to wear the hijab."
+ TAJ.Conservative_desc: "(Tajik Nationalism) - People's Democratic Party of Tajikistan, (Tajik/Farsi: Hizbi Demokratii Tojikiston)\n\nSpearheaded by Emomali Rahmon, the People's Democratic Party of Tajikistan has led Tajikistan with an iron grip. Due to the dominance of the party in Tajikistan, opposition movements attempting to topple the government have sprung up all around Tajikistan. The party has been focused mainly on reviving Tajik culture, identity, and statehood. The party under Emomali Rahmon has heavily restricted Islamic practices in an attempt to secularize Tajikistan, taking measures such as banning beards and creating dress codes for women who wish to wear the hijab."
  TAJ.anarchist_communism: "£TAJ_anarchist_communism Hizbi Sotsialistii Tojikiston"
  TAJ.anarchist_communism_icon: "£TAJ_anarchist_communism"
  TAJ.anarchist_communism_desc: ""
