--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -424,7 +424,7 @@
  CUB_era_of_cuban_freedom_desc: "Finally, now Cubans can think, live and travel freely. No more fairy tales of communism and imperialist ambitions, only freedom, only democracy."
  CUB_destroy_revanshists_memories: "Destroy Revanchism "
  CUB_destroy_revanshists_memories_desc: "Expansion of territories is good, but it should not be by forceful conquest. It is better to annex peacefully, through treaties."
- CUB_improve_trade: "Impove Trade"
+ CUB_improve_trade: "Improve Trade"
  CUB_improve_trade_desc: "To create a confederation, we need to expand trade with other countries who would be a part of it."
  CUB_reesatblish_relations: "Restore Diplomatic Relations"
  CUB_reesatblish_relations_desc: "We need to re-establish relations with potential confederate countries, then they will be more likely to join the alliance."
@@ -440,7 +440,7 @@
  CUB_liberate_puerto_rico_desc: "Puerto Rico is currently controlled by America, but this can be remedied diplomatically."
  CUB_invite_haiti: "Invite Haiti"
  CUB_invite_haiti_desc: "Let's invite our friends from Haiti to join our confederation!"
- CUB_invite_dominicana: "Invite Dominicana"
+ CUB_invite_dominicana: "Invite Dominican Republic"
  CUB_invite_dominicana_desc: "Time to unite with the Dominican Republic."
  CUB_invite_puerto_rico: "Invite Puerto Rico"
  CUB_invite_puerto_rico_desc: "A newly created state, time to join another."
