--- a/localisation/english/MD_focus_CUB_l_english.yml
+++ b/localisation/english/MD_focus_CUB_l_english.yml
@@ -435,7 +435,7 @@
  CUB_solve_problems_with_haiti: "Solve All Problems with Haiti"
  CUB_solve_problems_with_haiti_desc: "Haiti is a potential party to our treaty, but we have many grievances against each other that need to be let go in order to move forward."
  CUB_realetions_with_dominicana: "Improve Relations with Dominican Republic"
- CUB_realetions_with_dominicana_desc: "Dominicana is one of the largest countries in the Caribbean, and perhaps our confederation. It's time to be friends again."
+ CUB_realetions_with_dominicana_desc: "Dominican Republic is one of the largest countries in the Caribbean, and perhaps our confederation. It's time to be friends again."
  CUB_liberate_puerto_rico: "Negotiations on the Fate of Puerto Rico"
  CUB_liberate_puerto_rico_desc: "Puerto Rico is currently controlled by America, but this can be remedied diplomatically."
  CUB_invite_haiti: "Invite Haiti"
