--- a/localisation/english/MD_focus_TAJ_l_english.yml
+++ b/localisation/english/MD_focus_TAJ_l_english.yml
@@ -117,6 +117,12 @@
  TAJ_open_menu_desc: "Confused where to locate our current Radicalism and Terror Threat? Locate the globe icon on the bottom right of your screen, or click this decision and head to the 'Counter-Terror' tab."
  TAJ_arrest_iskp: "Arrest £generic_Caliphate_small  IS-KP Leadership"
  TAJ_arrest_iskp_desc: "Due to their lack of support, we are able to easily get locals to give out the locations of IS-KP leadership in the nation and arrest them."
+ iranic_confederation: "Reunification of Iranic Nations"
+ iranic_confederation_desc: "\n£TAJ_desctext_paniranist\n\n\n\n§HIranic§! peoples were separated from each other through out various wars in history. First by Alexander's conquest, and then later the Arab invasion. Ever since then, §HIranic§! people have been unable to unify under one banner and thus have been limited in their ability to forge a powerful state in the world. §HPan-Iranic§! movements first sprung up in [PER.GetFlag] §HIran§! in the 50's and then later spread to [AFG.GetFlag] §HAfghanistan§! and [TAJ.GetFlag] §HTajikistan§!, resulting in the suppression of Iranian customs and language by the Soviet Union. We will be able to send diplomatic missions to countries that have §HPan-Iranist governments§!, and begin preparations for the §HRe-unification§! of our states."
+ delegates_to_iran: "Send Delegates to [PER.GetFlag] Tehran"
+ delegates_to_afghanistan: "Send Delegates to [AFG.GetFlag] Kabul"
+ delegates_to_kurdistan: "Send Delegates to [KUR.GetFlag] Erbil"
+ delegates_to_south_ossetia: "Send Delegates to [SOO.GetFlag] Tskhinvali"
 
 # Tooltips
  TAJ_rad_TT: "§HRadicalization§! is §GLow§!"
@@ -159,6 +165,7 @@
  TAJ_requires_mechanic_TT: "§RCOME BACK TO THIS: MECHANIC REQUIRED FIRST§!"
  TAJ_integrate_agrarians_TT: "Will add §Y[TAJ.neutral_Social_L]§! into our coalition"
  TAJ_unlock_pamir_core_decisions_TT: "£decision_icon_small §YUnlocks§! Pamir Integration §YDecisions§!"
+ TAJ_unlock_paniran_decisions_TT: "£decision_icon_small §YUnlocks§! Reunification of Iranic Nations §YDecisions§!"
 
 # Misc
  TAJ_local_militias: "Local Militias"
