--- a/Changelog.txt
+++ b/Changelog.txt
@@ -18,6 +18,7 @@ v1.10.5
   - Fixed the AI liberating stuff to Salafist. No, no, no silly western nations. ISIS shouldn't be stronger!
   - The Salafist peace deal AI should liberate salafist nation's cores as long as they also do not claim or have a core on the state
   - European Union AI should now vote closer to their overlord if they are a subject
+  - Russia AI is now using decisions more often
 
  Balance:
   - Added additional internal factions effects to a variety of different trees
@@ -96,6 +97,8 @@ v1.10.5
   - Changed the Opinion modifier for East Asia Summit called "Attended East Asia Summit" from the news event
   - Changed the claims for Greater Serbia correcting including Croatia and Bosnia
   - Egypt can now boost Al-Nour Party
+  - Russia: Rework of the Zhirinovsky tree
+  - Russia: Two new trees of the subjects - the Urals and the Kuban
 
  Database:
   - ADJUSTED PRODUCTIVITY: MIC, KOS, KAR, KAC, SHN, WAA, ABK, JUB, CHE, SOM, RYU
